Audio Package & Refactoring
# Description
Added an audio package and renamed the animation package to use "package" in the name instead of "tools".

# Audio Package
- `AudioSourceModifierComponent`: Wrapper for `AudioSource` that provides additional functionality in the form of being able to lock the component to not allow playing any new sounds and support for the audio source modifiers.

- `IAudioSourceModifier`: Interface for all audio source modifiers intended to be used with the `AudioSourceModifierComponent`. When applied, they change the audio source component in some way.

- `AudioSourceModifier`: Base class for scriptable objects that modify the audio source component. Useful for immutable changes. Implements the `IAudioSourceModifier` interface.

- `AudioPitchRandomizer`: Defines the range in which a value will be randomly picked to set the audio source pitch to when applied.

- `AudioVolumeRandomizer`: Defines the range in which a value will be randomly picked to set audio source volume to when applied.

- `AudioSourceModifiersContainer`: Contains an immutable list of `IAudioSourceModifier` to apply to the audio source. Guarantees the order and length of the list will be maintained once created, however the referenced values are not guaranteed to be immutable themselves.

- `AudioSourceModifiersContainerConfiguration`: Scriptable object capable of creating `AudioSourceModifiersContainer`. Provides a way to define a container of modifiers. It does not cache the container, creating a new one each time.

--- a/JanitoAnimationPackage/package.json
+++ b/JanitoAnimationPackage/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "com.janito.animationtools",
+  "name": "com.janito.animationpackage",
   "version": "1.0.0",
-  "displayName": "Janito Animation Tools",
+  "displayName": "Janito Animation Package",
   "description": "Generic animation components and scriptable objects to modify and access Unity animations. Aims to expose additional Unity Events and information to the editor to create quick prototypes.",
   "author": {
     "name": "Janfranco H.M."
