Added Validation Library to EditorExtras
# Description
Added validation library to Janito Editor Extras Package.

--- a/JanitoEditorExtrasPackage/Runtime/Janito.EditorExtras.asmdef
+++ b/JanitoEditorExtrasPackage/Runtime/Janito.EditorExtras.asmdef
@@ -1,3 +1,14 @@
 {
-	"name": "Janito.EditorExtras"
+    "name": "Janito.EditorExtras",
+    "rootNamespace": "Janito.EditorExtras",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
