Added Parameter Value Listener & Extraction Window
# Description
Added a base class to listen for changes that are relevant to set an animator parameter value. Updated either frame-by-frame or manually.

Added an editor window to extract the parameters in an animator controller and generate an `AnimatorParameterHasher` for each selected at the desired path location.

--- a/JanitoAnimationPackage/Runtime/Janito.AnimationTools.asmdef
+++ b/JanitoAnimationPackage/Runtime/Janito.AnimationTools.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "Janito.AnimationTools",
     "rootNamespace": "Janito.Animations",
-    "references": [],
+    "references": [
+        "GUID:e3caa66287e2bf940b1046821593214b"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
