--- a/JanitoAnimationPackage/package.json
+++ b/JanitoAnimationPackage/package.json
@@ -1,8 +1,8 @@
 {
   "name": "com.janito.animationpackage",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "displayName": "Janito Animation Package",
-  "description": "Generic animation components and scriptable objects to modify and access Unity animations. Aims to expose additional Unity Events and information to the editor to create quick prototypes.",
+  "description": "Generic animation components and scriptable objects to modify and access Unity animations. Aims to expose additional Unity Events and information to the editor to create quick prototypes. \n<b>WARNING: This package depends on the Janito Editor Extras package.</b>",
   "author": {
     "name": "Janfranco H.M."
   }
