Added Path Library & Reorganising Folders
# Description
Added a path library to easily retrieve project relative paths.

Renamed `EditorExtrasLibrary` to `TypeLibrary` as the name was too vague.

Added folders for drawers and libraries, moving relevant files.

--- a/JanitoEditorExtrasPackage/package.json
+++ b/JanitoEditorExtrasPackage/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.janito.editorextras",
   "version": "1.0.1",
-  "displayName": "Janito`s Editor Extras Package",
+  "displayName": "Janito Editor Extras Package",
   "description": "Library of functions and attributes to expand the Unity editor functionality.",
   "author": {
     "name": "Janfranco H.M."
